--- a/Visualize_Logs.html
+++ b/Visualize_Logs.html
@@ -103,7 +103,7 @@ can be noisy if True.</li>
 can be noisy if True.</li>
 <li><strong>plotfilereads</strong> &#8211; Set to False to remove File Reads.</li>
 <li><strong>plotfilewrites</strong> &#8211; Set to False to remove File Writes.</li>
-<li><strong>plotfilewrites</strong> &#8211; Set to False to remove File Deletes.</li>
+<li><strong>plotfiledeletes</strong> &#8211; Set to False to remove File Deletes.</li>
 <li><strong>ignorepaths</strong> &#8211; Set this to a list of regular expressions.  If the
 regular expression fires in the Path column, that event will not be
 plotted.  Set to None to ignore this option.  This is case
