--- a/Visualize_Logs.html
+++ b/Visualize_Logs.html
@@ -114,11 +114,13 @@ can be noisy if True.</li>
 <li><strong>ignorepaths</strong> &#8211; Set this to a list of regular expressions.  If the
 regular expression fires in the Path column, that event will not be
 plotted.  Set to None to ignore this option.  This is case
-insensitive.</li>
+insensitive.  Remember to double escape since this is
+interpreted twice!</li>
 <li><strong>includepaths</strong> &#8211; Set this to a list of regular expressions.
 If the regular expression fires in the Path column, that event will
 be plotted.  This overrides ignores from ignorepaths above.
-Set to None to ignore this option.  This is case insensitive.</li>
+Set to None to ignore this option.  This is case insensitive.
+Remember to double escape since this is interpreted twice!</li>
 <li><strong>filename</strong> &#8211; A file name for the interactive HTML plot.</li>
 <li><strong>title</strong> &#8211; A title for the plot.</li>
 <li><strong>auto_open</strong> &#8211; Set to false to not open the file in a web browser.</li>
