--- a/_modules/Visualize_Logs/objects/CuckooJSONReport.html
+++ b/_modules/Visualize_Logs/objects/CuckooJSONReport.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Visualize_Logs.objects.CuckooJSONReport &#8212; Visualize_Logs 20161111.1 documentation</title>
+    <title>Visualize_Logs.objects.CuckooJSONReport &#8212; Visualize_Logs 20161112.1 documentation</title>
     
     <link rel="stylesheet" href="../../../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../../',
-        VERSION:     '20161111.1',
+        VERSION:     '20161112.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="../../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" />
-    <link rel="top" title="Visualize_Logs 20161111.1 documentation" href="../../../index.html" />
+    <link rel="top" title="Visualize_Logs 20161112.1 documentation" href="../../../index.html" />
     <link rel="up" title="Module code" href="../../index.html" />
    
   <link rel="stylesheet" href="../../../_static/custom.css" type="text/css" />
@@ -138,6 +138,7 @@
 <span class="sd">    http://lxr.free-electrons.com/source/include/uapi/linux/in.h&quot;&quot;&quot;</span>
 
     <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">jsonreportfile</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
+                 <span class="n">jsonreportdict</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
                  <span class="n">plotnetwork</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
                  <span class="n">plotfiles</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
                  <span class="n">plotfilecreates</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
@@ -160,8 +161,12 @@
 <span class="sd">        This has been tested with the cuckoo-modifed version, but it may</span>
 <span class="sd">        work with Cuckoo (proper) as well.</span>
 
-<span class="sd">        :param jsonreportfile: The path to the JSON report file.</span>
+<span class="sd">        :param jsonreportfile: The path to the JSON report file.  Set to</span>
+<span class="sd">            None to use a jsonreportstring.</span>
 <span class="sd">        :type jsonreportfile: A string.</span>
+<span class="sd">        :param jsonreportdict: A dict containing a JSON</span>
+<span class="sd">            report file loaded with JSON load.</span>
+<span class="sd">            Set to None to use a jsonreportfile.</span>
 <span class="sd">        :param plotnetwork: Set to False to ignore network activity.</span>
 <span class="sd">        :param plotfiles: Set to False to ignore file activity.</span>
 <span class="sd">        :param plotfilecreates: Set to False to ignore file creates.</span>
@@ -200,13 +205,19 @@
         <span class="k">if</span> <span class="n">includepaths</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span> <span class="ow">and</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">includepaths</span><span class="p">,</span> <span class="nb">list</span><span class="p">):</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">includepaths</span> <span class="o">=</span> <span class="n">includepaths</span>
 
-        <span class="k">if</span> <span class="ow">not</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">exists</span><span class="p">(</span><span class="n">jsonreportfile</span><span class="p">):</span>
-            <span class="k">raise</span> <span class="n">Exceptions</span><span class="o">.</span><span class="n">VisualizeLogsInvalidFile</span><span class="p">(</span><span class="n">jsonreportfile</span><span class="p">)</span>
-        <span class="k">else</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">jsonreportfile</span> <span class="o">=</span> <span class="n">jsonreportfile</span>
+        <span class="k">if</span> <span class="n">jsonreportfile</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
+            <span class="k">if</span> <span class="ow">not</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">exists</span><span class="p">(</span><span class="n">jsonreportfile</span><span class="p">):</span>
+                <span class="k">raise</span> <span class="n">Exceptions</span><span class="o">.</span><span class="n">VisualizeLogsInvalidFile</span><span class="p">(</span><span class="n">jsonreportfile</span><span class="p">)</span>
+            <span class="k">else</span><span class="p">:</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">jsonreportfile</span> <span class="o">=</span> <span class="n">jsonreportfile</span>
 
-        <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">jsonreportfile</span><span class="p">,</span> <span class="s1">&#39;r&#39;</span><span class="p">)</span> <span class="k">as</span> <span class="n">jsonfile</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">jsonreportdata</span> <span class="o">=</span> <span class="n">json</span><span class="o">.</span><span class="n">load</span><span class="p">(</span><span class="n">jsonfile</span><span class="p">)</span>
+            <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">jsonreportfile</span><span class="p">,</span> <span class="s1">&#39;r&#39;</span><span class="p">)</span> <span class="k">as</span> <span class="n">jsonfile</span><span class="p">:</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">jsonreportdata</span> <span class="o">=</span> <span class="n">json</span><span class="o">.</span><span class="n">load</span><span class="p">(</span><span class="n">jsonfile</span><span class="p">)</span>
+        <span class="k">elif</span> <span class="n">jsonreportdict</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">jsonreportfile</span> <span class="o">=</span> <span class="kc">None</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">jsonreportdata</span> <span class="o">=</span> <span class="n">jsonreportdict</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="k">raise</span> <span class="n">Exceptions</span><span class="o">.</span><span class="n">VisualizeLogsBadFunctionInput</span><span class="p">(</span><span class="s2">&quot;jsonreportfile&quot;</span><span class="p">)</span>
 
         <span class="c1"># Create a network graph...</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">digraph</span> <span class="o">=</span> <span class="n">networkx</span><span class="o">.</span><span class="n">DiGraph</span><span class="p">()</span>
@@ -775,14 +786,23 @@
 <span class="sd">        :param registry:  Registry</span>
 <span class="sd">        :returns: Noe name for the registry.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
+        <span class="n">origregistry</span> <span class="o">=</span> <span class="n">registry</span>
+        <span class="n">registry</span> <span class="o">=</span> <span class="n">registry</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">&#39;</span><span class="se">\\</span><span class="s1">&#39;</span><span class="p">,</span> <span class="s1">&#39;</span><span class="se">\\\\</span><span class="s1">&#39;</span><span class="p">)</span>
         <span class="n">regnodename</span> <span class="o">=</span> <span class="s1">&#39;&quot;REGISTRY </span><span class="si">{0}</span><span class="s1">&quot;&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">registry</span><span class="p">)</span>
         <span class="k">if</span> <span class="n">regnodename</span> <span class="ow">not</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">nodemetadata</span><span class="p">:</span>
+            <span class="n">nextid</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">nodemetadata</span><span class="p">)</span>
+            <span class="n">newregnodename</span> <span class="o">=</span> <span class="s1">&#39;REGISTRY </span><span class="si">{0}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">nextid</span><span class="p">)</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">nodemetadata</span><span class="p">[</span><span class="n">newregnodename</span><span class="p">]</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">()</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">nodemetadata</span><span class="p">[</span><span class="n">newregnodename</span><span class="p">][</span><span class="s1">&#39;link&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">regnodename</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">nodemetadata</span><span class="p">[</span><span class="n">regnodename</span><span class="p">]</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">()</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">nodemetadata</span><span class="p">[</span><span class="n">regnodename</span><span class="p">][</span><span class="s1">&#39;node_type&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="s1">&#39;REGISTRY&#39;</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">nodemetadata</span><span class="p">[</span><span class="n">regnodename</span><span class="p">][</span><span class="s1">&#39;registry&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">registry</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">digraph</span><span class="o">.</span><span class="n">add_node</span><span class="p">(</span><span class="n">regnodename</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="s1">&#39;REGISTRY&#39;</span><span class="p">)</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">nodemetadata</span><span class="p">[</span><span class="n">regnodename</span><span class="p">][</span><span class="s1">&#39;registry&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">origregistry</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">nodemetadata</span><span class="p">[</span><span class="n">regnodename</span><span class="p">][</span><span class="s1">&#39;link&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">newregnodename</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">digraph</span><span class="o">.</span><span class="n">add_node</span><span class="p">(</span><span class="n">newregnodename</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="s1">&#39;REGISTRY&#39;</span><span class="p">)</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="n">newregnodename</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">nodemetadata</span><span class="p">[</span><span class="n">regnodename</span><span class="p">][</span><span class="s1">&#39;link&#39;</span><span class="p">]</span>
 
-        <span class="k">return</span> <span class="n">regnodename</span>
+        <span class="k">return</span> <span class="n">newregnodename</span>
 
     <span class="k">def</span> <span class="nf">_add_sockets</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">node</span><span class="p">,</span> <span class="n">calls</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
@@ -1196,12 +1216,14 @@
                     <span class="s2">&quot;PID: </span><span class="si">{0}</span><span class="s2">&lt;br&gt;&quot;</span>
                     <span class="s2">&quot;Path: </span><span class="si">{1}</span><span class="s2">&lt;br&gt;&quot;</span>
                     <span class="s2">&quot;Command Line: </span><span class="si">{2}</span><span class="s2">&lt;br&gt;&quot;</span>
-                    <span class="s2">&quot;Parent PID: </span><span class="si">{3}</span><span class="s2">&quot;</span>
+                    <span class="s2">&quot;Parent PID: </span><span class="si">{3}</span><span class="s2">&lt;br&gt;&quot;</span>
+                    <span class="s2">&quot;First Seen: </span><span class="si">{4}</span><span class="s2">&quot;</span>
                     <span class="o">.</span><span class="n">format</span><span class="p">(</span>
                         <span class="bp">self</span><span class="o">.</span><span class="n">nodemetadata</span><span class="p">[</span><span class="n">node</span><span class="p">][</span><span class="s1">&#39;pid&#39;</span><span class="p">],</span>
                         <span class="bp">self</span><span class="o">.</span><span class="n">nodemetadata</span><span class="p">[</span><span class="n">node</span><span class="p">][</span><span class="s1">&#39;module_path&#39;</span><span class="p">],</span>
                         <span class="n">cmdline</span><span class="p">,</span>
-                        <span class="bp">self</span><span class="o">.</span><span class="n">nodemetadata</span><span class="p">[</span><span class="n">node</span><span class="p">][</span><span class="s1">&#39;parent_id&#39;</span><span class="p">]</span>
+                        <span class="bp">self</span><span class="o">.</span><span class="n">nodemetadata</span><span class="p">[</span><span class="n">node</span><span class="p">][</span><span class="s1">&#39;parent_id&#39;</span><span class="p">],</span>
+                        <span class="bp">self</span><span class="o">.</span><span class="n">nodemetadata</span><span class="p">[</span><span class="n">node</span><span class="p">][</span><span class="s1">&#39;first_seen&#39;</span><span class="p">]</span>
                         <span class="p">)</span>
                                <span class="p">)</span>
             <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">digraph</span><span class="o">.</span><span class="n">node</span><span class="p">[</span><span class="n">node</span><span class="p">][</span><span class="s1">&#39;type&#39;</span><span class="p">]</span> <span class="o">==</span> <span class="s1">&#39;HOST&#39;</span><span class="p">:</span>
@@ -1347,10 +1369,11 @@
             <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">digraph</span><span class="o">.</span><span class="n">node</span><span class="p">[</span><span class="n">node</span><span class="p">][</span><span class="s1">&#39;type&#39;</span><span class="p">]</span> <span class="o">==</span> <span class="s1">&#39;REGISTRY&#39;</span><span class="p">:</span>
                 <span class="n">RegistryX</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">pos</span><span class="p">[</span><span class="n">node</span><span class="p">][</span><span class="mi">0</span><span class="p">])</span>
                 <span class="n">RegistryY</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">pos</span><span class="p">[</span><span class="n">node</span><span class="p">][</span><span class="mi">1</span><span class="p">])</span>
+                <span class="n">newreg</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">nodemetadata</span><span class="p">[</span><span class="n">node</span><span class="p">][</span><span class="s1">&#39;link&#39;</span><span class="p">]</span>
                 <span class="n">registrytxt</span><span class="o">.</span><span class="n">append</span><span class="p">(</span>
                     <span class="s2">&quot;Registry: </span><span class="si">{0}</span><span class="s2">&quot;</span>
                     <span class="o">.</span><span class="n">format</span><span class="p">(</span>
-                        <span class="bp">self</span><span class="o">.</span><span class="n">nodemetadata</span><span class="p">[</span><span class="n">node</span><span class="p">][</span><span class="s1">&#39;registry&#39;</span><span class="p">]</span>
+                        <span class="bp">self</span><span class="o">.</span><span class="n">nodemetadata</span><span class="p">[</span><span class="n">newreg</span><span class="p">][</span><span class="s1">&#39;registry&#39;</span><span class="p">]</span>
                         <span class="p">)</span>
                                <span class="p">)</span>
             <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">digraph</span><span class="o">.</span><span class="n">node</span><span class="p">[</span><span class="n">node</span><span class="p">][</span><span class="s1">&#39;type&#39;</span><span class="p">]</span> <span class="o">==</span> <span class="s1">&#39;REGISTRYWRITE&#39;</span><span class="p">:</span>
